--- a/zero-knowledge/assets/wasm/prover.html
+++ b/zero-knowledge/assets/wasm/prover.html
@@ -39,7 +39,7 @@
 
     <script type='text/javascript'>
       var statusElement = document.getElementById('status');
-      // var progressElement = document.getElementById('progress');
+      var progressElement = document.getElementById('progress');
       // var spinnerElement = document.getElementById('spinner');
 
       var Module = {
@@ -83,14 +83,14 @@
           Module.setStatus.last.text = text;
           if (m) {
             text = m[1];
-            // progressElement.value = parseInt(m[2])*100;
-            // progressElement.max = parseInt(m[4])*100;
-            // progressElement.hidden = false;
+            progressElement.value = parseInt(m[2])*100;
+            progressElement.max = parseInt(m[4])*100;
+            progressElement.hidden = false;
             // spinnerElement.hidden = false;
           } else {
-            // progressElement.value = null;
-            // progressElement.max = null;
-            // progressElement.hidden = true;
+            progressElement.value = null;
+            progressElement.max = null;
+            progressElement.hidden = true;
             // if (!text) spinnerElement.style.display = 'none';
           }
           statusElement.innerHTML = text;
