--- a/zero-knowledge/assets/wasm/prover.html
+++ b/zero-knowledge/assets/wasm/prover.html
@@ -40,7 +40,7 @@
     <script type='text/javascript'>
       var statusElement = document.getElementById('status');
       var progressElement = document.getElementById('progress');
-      // var spinnerElement = document.getElementById('spinner');
+      var spinnerElement = document.getElementById('spinner');
 
       var Module = {
         preRun: [],
@@ -86,12 +86,12 @@
             progressElement.value = parseInt(m[2])*100;
             progressElement.max = parseInt(m[4])*100;
             progressElement.hidden = false;
-            // spinnerElement.hidden = false;
+            spinnerElement.hidden = false;
           } else {
             progressElement.value = null;
             progressElement.max = null;
             progressElement.hidden = true;
-            // if (!text) spinnerElement.style.display = 'none';
+            if (!text) spinnerElement.style.display = 'none';
           }
           statusElement.innerHTML = text;
         },
