--- a/zero-knowledge/assets/wasm/verifier.html
+++ b/zero-knowledge/assets/wasm/verifier.html
@@ -11,7 +11,7 @@
   <div class="spinner" id='spinner' style="display: none;"></div>
   <div class="emscripten" id="status" style="display: none;">Downloading...</div>
 
-  <div class="emscripten">
+  <div class="emscripten" id="divProgress">
     <progress value="0" max="100" id="progress" hidden=1></progress>
   </div>
   <div>
@@ -43,6 +43,7 @@
     var statusElement = document.getElementById('status');
     var progressElement = document.getElementById('progress');
     var spinnerElement = document.getElementById('spinner');
+	var divProgressElement = document.getElementById('divProgress');
 
     var Module = {
       preRun: [],
@@ -89,10 +90,12 @@
           progressElement.max = parseInt(m[4]) * 100;
           progressElement.hidden = false;
           spinnerElement.hidden = false;
+		  divProgressElement.hidden = false;
         } else {
           progressElement.value = null;
           progressElement.max = null;
           progressElement.hidden = true;
+		  divProgressElement.hidden = true;
           if (!text) spinnerElement.style.display = 'none';
         }
         statusElement.innerHTML = text;
