--- a/zero-knowledge/assets/wasm/verifier.html
+++ b/zero-knowledge/assets/wasm/verifier.html
@@ -14,7 +14,7 @@
   <div class="emscripten" id="divProgress">
     <progress value="0" max="100" id="progress" hidden=1></progress>
   </div>
-  <div>
+  <div id="content>
     <table>
       <tr>
       <tr>
