--- a/zero-knowledge/assets/wasm/prover.html
+++ b/zero-knowledge/assets/wasm/prover.html
@@ -93,7 +93,7 @@
             progressElement.value = null;
             progressElement.max = null;
             progressElement.hidden = true;
-			divProgressElement.hidden = false;
+			divProgressElement.hidden = true;
             //if (!text) spinnerElement.style.display = 'none';
           }
           statusElement.innerHTML = text;
