--- a/zero-knowledge/assets/wasm/prover.html
+++ b/zero-knowledge/assets/wasm/prover.html
@@ -84,17 +84,18 @@
           Module.setStatus.last.text = text;
           if (m) {
             text = m[1];
-            progressElement.value = parseInt(m[2])*100;
-            progressElement.max = parseInt(m[4])*100;
-            progressElement.hidden = false;
-            //spinnerElement.hidden = false;
-			divProgressElement.hidden = false;
+            //progressElement.value = parseInt(m[2])*100;
+            //progressElement.max = parseInt(m[4])*100;
+            //progressElement.hidden = false;
+            spinnerElement.hidden = false;
+			//divProgressElement.hidden = false;
           } else {
-            progressElement.value = null;
-            progressElement.max = null;
-            progressElement.hidden = true;
-			divProgressElement.hidden = true;
-            //if (!text) spinnerElement.style.display = 'none';
+            //progressElement.value = null;
+            //progressElement.max = null;
+            //progressElement.hidden = true;
+			//divProgressElement.hidden = true;
+			spinnerElement.hidden = true;
+            if (!text) spinnerElement.style.display = 'none';
           }
           statusElement.innerHTML = text;
         },
@@ -108,7 +109,7 @@
       window.onerror = function(event) {
         // TODO: do not warn on ok events like simulating an infinite loop or exitStatus
         Module.setStatus('Exception thrown, see JavaScript console');
-        // spinnerElement.style.display = 'none';
+        spinnerElement.style.display = 'none';
         Module.setStatus = function(text) {
           if (text) console.error('[post-exception status] ' + text);
         };
