--- a/zero-knowledge/assets/wasm/verifier.html
+++ b/zero-knowledge/assets/wasm/verifier.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <div class="spinner" id='spinner' style="display: none;"></div>
+  <div class="spinner" id='spinner'></div>
   <div class="emscripten" id="status" style="display: none;">Downloading...</div>
 
   <div class="emscripten" id="divProgress">
@@ -86,16 +86,17 @@
         Module.setStatus.last.text = text;
         if (m) {
           text = m[1];
-          progressElement.value = parseInt(m[2]) * 100;
-          progressElement.max = parseInt(m[4]) * 100;
-          progressElement.hidden = false;
+          //progressElement.value = parseInt(m[2]) * 100;
+          //progressElement.max = parseInt(m[4]) * 100;
+          //progressElement.hidden = false;
           spinnerElement.hidden = false;
-		  divProgressElement.hidden = false;
+		  //divProgressElement.hidden = false;
         } else {
-          progressElement.value = null;
-          progressElement.max = null;
-          progressElement.hidden = true;
-		  divProgressElement.hidden = true;
+          //progressElement.value = null;
+          //progressElement.max = null;
+          //progressElement.hidden = true;
+		  //divProgressElement.hidden = true;
+		  spinnerElement.hidden = true;
           if (!text) spinnerElement.style.display = 'none';
         }
         statusElement.innerHTML = text;
@@ -111,7 +112,7 @@
       arguments_ = [];
       // TODO: do not warn on ok events like simulating an infinite loop or exitStatus
       Module.setStatus('Exception thrown, see JavaScript console');
-      // spinnerElement.style.display = 'none';
+      spinnerElement.style.display = 'none';
       Module.setStatus = function (text) {
         if (text) console.error('[post-exception status] ' + text);
       };
