--- a/zero-knowledge/assets/wasm/prover.html
+++ b/zero-knowledge/assets/wasm/prover.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="zk_styles.css">
   </head>
   <body>
-    <div class="spinner" id='spinner' style="display: none;"></div>
+    <div class="spinner" id='spinner'></div>
     <div class="emscripten" id="status" style="display: none;">Downloading...</div>
     <div class="emscripten" id="divProgress">
       <progress value="0" max="100" id="progress" hidden=1></progress>
