--- a/zero-knowledge/assets/wasm/verifier.html
+++ b/zero-knowledge/assets/wasm/verifier.html
@@ -11,9 +11,9 @@
   <div class="spinner" id='spinner'></div>
   <div class="emscripten" id="status" style="display: none;">Downloading...</div>
 
-  <div class="emscripten" id="divProgress">
+  <!--<div class="emscripten">
     <progress value="0" max="100" id="progress" hidden=1></progress>
-  </div>
+  </div> -->
   <div id="content">
     <table>
       <tr>
@@ -41,9 +41,9 @@
   <textarea id="output" rows="8"></textarea>
   <script type='text/javascript'>
     var statusElement = document.getElementById('status');
-    var progressElement = document.getElementById('progress');
+    //var progressElement = document.getElementById('progress');
     var spinnerElement = document.getElementById('spinner');
-	var divProgressElement = document.getElementById('divProgress');
+	//var divProgressElement = document.getElementById('divProgress');
 
     var Module = {
       preRun: [],
